--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ body {
 
 main {
   display: grid;
+  position: relative;
 }
 
 nav {
@@ -26,8 +27,73 @@ nav {
   justify-content: space-between;
 }
 
-nav ul {
+ul {
+  list-style: none;
+}
+
+li {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.md-menu {
   display: none;
+}
+
+.sm-menu {
+  position: fixed;
+  right: 0;
+  width: 100%;
+  background-color: hsla(0, 0%, 8%, 0.7);
+  min-height: 100vh;
+}
+
+.menu {
+  background-color: var(--primary-white);
+  width: 65%;
+  margin-left: auto;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem 0.75rem;
+}
+
+.menu img {
+  margin-left: auto;
+  display: inline-block;
+}
+
+.menu ul {
+  display: flex;
+  flex-direction: column;
+  margin: 2rem 1rem;
+  gap: 1.25rem;
+  align-items: flex-start;
+  color: var(--primary-gray);
+}
+
+.menu .inner-menu {
+  margin: 0 1.5rem;
+}
+
+.menu div {
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+  align-items: center;
+}
+
+.menu div li:last-of-type {
+  display: inline-block;
+  border: 2px solid var(--primary-gray);
+  inline-size: 100%;
+  text-align: center;
+  padding: 0.5rem;
+  border-radius: 12px;
 }
 
 .hero {
