--- a/styles.css
+++ b/styles.css
@@ -184,7 +184,7 @@ a {
     display: grid;
     grid-template-areas: "section hero" "clients hero";
     width: 90%;
-    margin: auto;
+    margin: 2rem auto;
     gap: 1rem;
     place-content: space-evenly;
   }
@@ -213,6 +213,10 @@ a {
   p {
     padding: 0;
     max-inline-size: 350px;
+  }
+
+  a {
+    margin: 3rem 0;
   }
 
   .clients {
@@ -247,9 +251,9 @@ a {
   }
 
   p {
-    font-size: 1.5rem;
-    line-height: 2rem;
-    max-inline-size: 440px;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    max-inline-size: 420px;
   }
 
   .clients {
@@ -257,6 +261,6 @@ a {
   }
 
   .clients img {
-    inline-size: 100px;
+    inline-size: 80px;
   }
 }
