--- a/styles.css
+++ b/styles.css
@@ -242,7 +242,7 @@ a {
 
 @media (min-width: 1280px) {
   nav {
-    margin: 0 2rem;
+    margin: 0.75rem 2rem;
     justify-content: flex-start;
     gap: 1rem;
   }
@@ -289,6 +289,8 @@ a {
     place-content: space-between;
     max-width: 1100px;
     gap: 1.5rem;
+    align-items: flex-end;
+    margin: 2rem auto;
   }
   .hero {
     block-size: 650px;
