--- a/styles.css
+++ b/styles.css
@@ -294,10 +294,11 @@ a {
     max-width: 1100px;
     gap: 1.5rem;
     align-items: flex-end;
-    margin: 2rem auto;
+    margin: 3rem auto 1rem auto;
   }
+
   .hero {
-    block-size: 550px;
+    block-size: 600px;
   }
 
   h1 {
