--- a/styles.css
+++ b/styles.css
@@ -341,6 +341,8 @@ section a {
 
   .clients {
     max-inline-size: 100%;
+    justify-content: flex-start;
+    gap: 1.75rem;
   }
 
   .clients img {
