--- a/styles.css
+++ b/styles.css
@@ -294,6 +294,10 @@ section a {
     box-shadow: 0px 10px 40px rgb(0 0 0 / 15%);
   }
 
+  .inner-menu ul {
+    flex-direction: column;
+  }
+
   .features + .inner-menu {
     left: -5%;
   }
