--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,7 @@ a {
 }
 
 .menu .inner-menu {
-  margin: 0 1.5rem;
+  margin: -29px 0.5rem;
   display: none;
 }
 
@@ -289,9 +289,10 @@ section a {
     flex-direction: column;
     top: 2rem;
     align-items: baseline;
-    padding: 2rem 1rem;
+    padding: 2rem;
     border-radius: 12px;
     box-shadow: 0px 10px 40px rgb(0 0 0 / 15%);
+    margin: 0 1.5rem;
   }
 
   .inner-menu ul {
